<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background_fragments"
    android:gravity="center_vertical"
    android:paddingHorizontal="20dp"
    tools:context=".fragments.CompteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_pseudo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/editTextPseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@drawable/bg_rounded"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:labelFor="@id/editTextPseudo"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/erreurSaisiePseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erreur_saisie_pseudo"
        android:textColor="@color/error"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_mot_de_passe"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/bg_rounded"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:labelFor="@id/editTextPassword"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/erreurSaisieMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erreur_saisie_mdp"
        android:textColor="@color/error"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intitule_bouton_connexion"
        android:layout_marginTop="50dp"
        android:layout_gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intitule_bouton_deconnexion"
        android:layout_marginTop="50dp"
        android:layout_gravity="center" />

</LinearLayout>
