<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragments"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="0dp"
    android:paddingBottom="65dp"
    tools:context=".fragments.SoftsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_item_softs"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/quantiteBoissons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/buttonSirops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="@color/buttons_sirops"
                android:layout_marginEnd="5dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image_sirops"
                    android:src="@drawable/ic_baseline_sirops_24"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_bouton_sirops"
                    android:textStyle="bold"
                    android:textColor="@color/buttons_sirops_text"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonSofts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="@color/buttons_softs"
                android:layout_marginEnd="5dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image_sodas"
                    android:src="@drawable/ic_baseline_sodas_24"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_bouton_sodas"
                    android:textStyle="bold"
                    android:textColor="@color/buttons_softs_text"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonCafes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="@color/buttons_cafes"
                android:layout_marginEnd="5dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image_cafes"
                    android:src="@drawable/ic_baseline_cafes_24"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_bouton_cafes"
                    android:textStyle="bold"
                    android:textColor="@color/buttons_cafes_text"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonThes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="@color/buttons_thes"
                android:layout_marginEnd="5dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_image_thes"
                    android:src="@drawable/ic_baseline_thes_24"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_bouton_thes"
                    android:textStyle="bold"
                    android:textColor="@color/buttons_thes_text"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/contenuSirops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSirops"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenuSofts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSofts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenuCafes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCafes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenuThes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewThes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>