<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/rectangle_button">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nomVins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/imageVins"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/description_image_item_vins"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/type_titre_carte"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/styleVins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/region_titre_carte"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/regionVins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:text="@string/alcool_titre_carte"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:id="@+id/main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp">

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/circularProgressIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="false"
                            app:indicatorColor="@color/colorPrimary"
                            android:layout_centerInParent="true"
                            app:trackColor="@color/colorPrimary40Percent"
                            app:trackThickness="4dp" />

                        <TextView
                            android:id="@+id/quantiteAlcoolVins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
